tests/integration/libuild/errors/import-inexist-module/error.js
module.exports = {
  msg: "Can't resolve 'fake'",
};
